force-app/main/default/objects/Case_Contact_Number__c/Case_Contact_Number__c.object-meta.xml
<CustomObject>
    <label>Case Contact Number</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Case Contact Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contact Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>