force-app/main/default/objects/Case_Contact_Number__c/fields/Product_Routing__c.field-meta.xml
<CustomField>
    <fullName>Product_Routing__c</fullName>
    <label>Product Routing</label>
    <referenceTo>ProductRouting__c</referenceTo>
    <relationshipLabel>Case Contact Numbers</relationshipLabel>
    <relationshipName>Case_Contact_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>