force-app/main/default/objects/Case_Contact_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product_Routing__c</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>Contact_Telephone_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>